// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validation function - throw error 1`] = `
{
  "errorMessage": "Validation fn threw!",
  "errorPath": [],
  "isValid": false,
}
`;

exports[`Validation function - throw error object - invalid 1`] = `
{
  "errorMessage": "Exception in validationFn",
  "errorPath": [],
  "isValid": false,
}
`;

exports[`Validation function - throw error object - valid 1`] = `
{
  "errorMessage": "Custom error object, with message field",
  "errorPath": [],
  "isValid": false,
}
`;

exports[`Validation function 1`] = `
{
  "errorMessage": "Custom validation failed",
  "errorPath": [],
  "isValid": false,
}
`;
